--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: ru-RU
+lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone:
@@ -16,17 +16,19 @@ timezone:
 
 title: Will Napolini # the main title
 
-tagline: Мышление • Навыки • Инструменты # it will display as the sub-title
+tagline: Mindset • Skillset • Toolset # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  Уилл Наполини — автор блога о книгах по саморазвитию, психологии и продуктивности. Читайте обзоры книг, краткие конспекты и практические инсайты. Вместе разбираем лучшие книги: от классики до современных бестселлеров. Узнайте, как применять идеи из книг в жизни, бизнесе и карьере.  
+  
+  **Will Napolini** is the author of a blog about self-development, psychology, and productivity books. Read book reviews, concise summaries, and practical insights. Together, we explore the best books — from timeless classics to modern bestsellers. Discover how to apply ideas from books in your life, business, and career.
 
-  В блоге вы найдете:  
-  • **Конспекты книг** — ключевые идеи за 5 минут,  
-  • **Анализ и разбор** — как применять знания на практике,  
-  • **Подборки книг** — топ по темам: лидерство, мышление, наука.  
+On the blog you’ll find:
+• **Book summaries** — key ideas in just 5 minutes
+• **Analysis and breakdowns** — how to put knowledge into action
+• **Curated book lists** — top picks by topic: leadership, mindset, science
 
-  Подпишитесь, чтобы получать лучшие идеи из нон-фикшн литературы!  
+Subscribe to get the best ideas from nonfiction literature!
+ 
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
